# jumpdeck-beat-analyzer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/jumpdeck_analyzer/: __init__.py  analyzer.py  validate_analysis.py
src/jumpdeck_analyzer/schemas/: analysis_v8.json
src/jumpdeck_analyzer/tests/: test_analyzer_smoke.py  test_cli.py  test_validate_analysis.py
