[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jumpdeck-analyzer"
version = "0.1.0"
description = "Jumpdeck beat/audio analyzer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "librosa>=0.10",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
validate = ["jsonschema>=4.0"]
audio = [
  "soundfile>=0.12",
  "audioread>=3.0"
]

[project.scripts]
jumpdeck-analyzer = "jumpdeck_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
